Err.txt
src/tensor.cc: In member function ‘alignment* ProdTensor::postprocess(double*, int, int, int, double)’:
src/tensor.cc:752:63: error: ‘unqiue’ was not declared in this scope
   last = unqiue(align->PrefG[l].begin(), align->PrefG[l].end());
                                                               ^
src/tensor.cc:847:34: error: request for member ‘vertex_id’ in ‘(align->alignment::PrefG + ((sizetype)(((long unsigned int)i_prime) * 24ul)))->std::vector<_Tp, _Alloc>::operator[]<int, std::allocator<int> >(((std::vector<int, std::allocator<int> >::size_type)l))’, which is of non-class type ‘__gnu_cxx::__alloc_traits<std::allocator<int> >::value_type {aka int}’
     j = align->PrefG[i_prime][l].vertex_id;
                                  ^
src/tensor.cc:855:34: error: request for member ‘vertex_id’ in ‘(align->alignment::PrefH + ((sizetype)(((long unsigned int)i) * 24ul)))->std::vector<_Tp, _Alloc>::operator[]<int, std::allocator<int> >(((std::vector<int, std::allocator<int> >::size_type)l))’, which is of non-class type ‘__gnu_cxx::__alloc_traits<std::allocator<int> >::value_type {aka int}’
     j_prime = align->PrefH[i][l].vertex_id;
                                  ^
src/tensor.cc:906:28: error: request for member ‘vertex_id’ in ‘(align->alignment::PrefH + ((sizetype)(((long unsigned int)i) * 24ul)))->std::vector<_Tp, _Alloc>::operator[]<int, std::allocator<int> >(((std::vector<int, std::allocator<int> >::size_type)s))’, which is of non-class type ‘__gnu_cxx::__alloc_traits<std::allocator<int> >::value_type {aka int}’
      if(align->PrefH[i][s].vertex_id == (int)j_prime)
                            ^
src/tensor.cc:914:34: error: request for member ‘vertex_id’ in ‘(align->alignment::PrefG + ((sizetype)(((long unsigned int)i_prime) * 24ul)))->std::vector<_Tp, _Alloc>::operator[]<int, std::allocator<int> >(((std::vector<int, std::allocator<int> >::size_type)s))’, which is of non-class type ‘__gnu_cxx::__alloc_traits<std::allocator<int> >::value_type {aka int}’
      if(align->PrefG[i_prime][s].vertex_id == (int)j)
                                  ^
make: *** [src/tensor.o] Error 1
